--- a/app/src/main/res/layout-land/repo_overview_fragment.xml
+++ b/app/src/main/res/layout-land/repo_overview_fragment.xml
@@ -5,10 +5,10 @@
               android:orientation="horizontal"
     >
 
-  <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:layout_weight="1"
+  <ScrollView
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:layout_weight="1"
       >
 
     <LinearLayout
