--- a/app/src/main/res/layout/row_issue_discussion.xml
+++ b/app/src/main/res/layout/row_issue_discussion.xml
@@ -5,14 +5,14 @@
               android:layout_height="match_parent"
     >
 
-  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="@dimen/gapMedium"
-                android:layout_marginBottom="@dimen/gapSmall"
-                android:layout_marginTop="@dimen/gapSmall"
-                android:orientation="vertical"
-                android:padding="@dimen/gapMedium"
+  <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:layout_margin="@dimen/gapMedium"
+      android:layout_marginBottom="@dimen/gapSmall"
+      android:layout_marginTop="@dimen/gapSmall"
+      android:orientation="vertical"
+      android:padding="@dimen/gapMedium"
       >
 
     <LinearLayout
