Show repo detail as tablet layout

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -76,4 +76,6 @@
   <color name="crumb_active">#fff</color>
   <color name="crumb_inactive">#73ffffff</color>
 
+  <color name="repo_detail_tab_icon">@color/white</color>
+
 </resources>
