--- a/app/src/main/res/layout-sw600dp-land/generic_toolbar_responsive.xml
+++ b/app/src/main/res/layout-sw600dp-land/generic_toolbar_responsive.xml
@@ -1,9 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:app="http://schemas.android.com/apk/res-auto"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:orientation="vertical"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
     >
+
   <FrameLayout
       android:layout_width="match_parent"
       android:layout_height="260dp"
@@ -22,23 +24,14 @@
   </FrameLayout>
 
   <FrameLayout
+      android:id="@+id/content"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
+      android:orientation="vertical"
       android:background="@drawable/big_card_bg"
       android:layout_marginLeft="120dp"
       android:layout_marginRight="120dp"
       android:layout_marginTop="96dp"
-      >
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tabLayout"
-        android:layout_width="match_parent"
-        android:layout_height="?actionBarSize"
-        />
-    <android.support.v4.view.ViewPager
-        android:id="@+id/content"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="?actionBarSize"
-        />
-  </FrameLayout>
+      />
+
 </FrameLayout>
