--- a/app/src/main/res/layout/user_resume_fragment.xml
+++ b/app/src/main/res/layout/user_resume_fragment.xml
@@ -14,130 +14,9 @@
       android:orientation="vertical"
       >
 
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/gapMedium"
-        card_view:cardElevation="4dp"
-        tools:layout_height="120dp"
-        app:cardBackgroundColor="?gitskarios_card_background"
-        >
-
-      <LinearLayout
-          android:id="@+id/cardAbout"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:orientation="vertical"
-          >
-
-        <TextView
-            style="@style/Base.TextAppearance.AppCompat.Subhead"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:fontFamily="sans-serif-light"
-            android:textColor="?colorAccent"
-            android:padding="@dimen/gapMedium"
-            android:text="@string/user_resume_about"
-            android:textSize="24sp"
-            />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="?colorAccent"
-            />
-      </LinearLayout>
-
-    </android.support.v7.widget.CardView>
-
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/gapMedium"
-        card_view:cardElevation="4dp"
-        tools:layout_height="120dp"
-        app:cardBackgroundColor="?gitskarios_card_background"
-        >
-
-      <LinearLayout
-          android:id="@+id/cardContributions"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:orientation="vertical"
-          >
-
-        <TextView
-            style="@style/Base.TextAppearance.AppCompat.Subhead"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:fontFamily="sans-serif-light"
-            android:textColor="?colorAccent"
-            android:padding="@dimen/gapMedium"
-            android:text="@string/user_resume_contributions"
-            android:textSize="24sp"
-            />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="?colorAccent"
-            />
-
-        <com.github.javierugarte.GitHubContributionsView
-            android:id="@+id/github_contributions_view"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_margin="@dimen/gapLarge"
-            app:backgroundBaseColor="?gitskarios_card_background"
-            app:baseColor="?colorAccent"
-            app:displayMonth="true"
-            app:lastWeeks="50"
-            app:textColor="?colorAccent"
-            />
-
-      </LinearLayout>
-
-    </android.support.v7.widget.CardView>
-
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="@dimen/gapXLarge"
-        android:layout_marginTop="@dimen/gapMedium"
-        card_view:cardElevation="4dp"
-        tools:layout_height="120dp"
-        app:cardBackgroundColor="?gitskarios_card_background"
-        >
-
-      <LinearLayout
-          android:id="@+id/cardGithub"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:orientation="vertical"
-          >
-
-        <TextView
-            style="@style/Base.TextAppearance.AppCompat.Subhead"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:fontFamily="sans-serif-light"
-            android:padding="@dimen/gapMedium"
-            android:text="@string/user_resume_github"
-            android:textSize="24sp"
-            android:textColor="?colorAccent"
-            />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="?colorAccent"
-            />
-      </LinearLayout>
-
-    </android.support.v7.widget.CardView>
+    <include layout="@layout/user_resume_card_bio"/>
+    <include layout="@layout/user_resume_card_contributions"/>
+    <include layout="@layout/user_resume_card_github"/>
 
   </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
