--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -66,7 +66,7 @@
         <item name="gitskarios_icons">@color/gray_github_light</item>
         <item name="gitskarios_title">@color/accent</item>
         <item name="gitskarios_webview">@color/md_grey_900</item>
-        <item name="gitskarios_card_background">@color/material_drawer_dark_divider</item>
+        <item name="gitskarios_card_background">@color/md_grey_800</item>
 
         <item name="diff_addition_text_color">@color/black</item>
         <item name="diff_deletion_text_color">@color/black</item>
