--- a/app/src/main/res/values-sw600dp-land/dimens.xml
+++ b/app/src/main/res/values-sw600dp-land/dimens.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
   <dimen name="responsive_ly_margin_horizontal">120dp</dimen>
+  <dimen name="responsive_ly_fab_margin_top">218dp</dimen>
   <dimen name="responsive_ly_margin_vertical">96dp</dimen>
+  <dimen name="responive_toolbar_height">240dp</dimen>
 </resources>
