--- a/app/src/main/res/values-sw820dp-land/dimens.xml
+++ b/app/src/main/res/values-sw820dp-land/dimens.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+  <dimen name="responsive_ly_fab_margin_top">230dp</dimen>
   <dimen name="responsive_ly_margin_horizontal">120dp</dimen>
   <dimen name="responsive_ly_margin_vertical">96dp</dimen>
+  <dimen name="responive_toolbar_height">260dp</dimen>
+
 </resources>
