--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -102,6 +102,8 @@
   <dimen name="image_final_width">32dp</dimen>
   <dimen name="reaction_size">20dp</dimen>
   <dimen name="repo_about_icon">20dp</dimen>
+  <dimen name="responive_toolbar_height">56dp</dimen>
+  <dimen name="responsive_ly_fab_margin_top">0dp</dimen>
   <dimen name="responsive_ly_margin_horizontal">160dp</dimen>
   <dimen name="responsive_ly_margin_vertical">128dp</dimen>
 </resources>
