--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -2,6 +2,7 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
+             xmlns:app="http://schemas.android.com/apk/res-auto"
              tools:context=".ui.activity.WelcomeActivity"
     >
 
@@ -55,9 +56,10 @@
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/login_password"
+          app:passwordToggleEnabled="true"
           >
 
-        <com.maksim88.passwordedittext.PasswordEditText
+        <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
