--- a/app/src/main/res/layout-sw600dp-land/issue_detail_activity.xml
+++ b/app/src/main/res/layout-sw600dp-land/issue_detail_activity.xml
@@ -24,29 +24,28 @@
         />
   </FrameLayout>
 
-  <android.support.v4.widget.SwipeRefreshLayout
+  <FrameLayout
       android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:id="@id/swipe"
+      android:layout_height="wrap_content"
       android:background="@drawable/big_card_bg"
       android:layout_marginLeft="@dimen/responsive_ly_margin_horizontal"
       android:layout_marginRight="@dimen/responsive_ly_margin_horizontal"
       android:layout_marginTop="@dimen/responsive_ly_margin_vertical"
       >
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler"
+
+    <android.support.v4.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        />
-  </android.support.v4.widget.SwipeRefreshLayout>
+        android:id="@id/swipe"
+        >
+      <android.support.v7.widget.RecyclerView
+          android:id="@+id/recycler"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          />
+    </android.support.v4.widget.SwipeRefreshLayout>
 
-  <android.support.design.widget.FloatingActionButton
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="@dimen/responsive_ly_fab_margin_top"
-      android:layout_gravity="right"
-      android:id="@id/fabButton"
-      android:layout_marginRight="16dp"
-      />
+    <include layout="@layout/issue_detail_add_comment"/>
 
+  </FrameLayout>
 </FrameLayout>
