--- a/app/src/main/res/layout/issue_detail_activity.xml
+++ b/app/src/main/res/layout/issue_detail_activity.xml
@@ -21,6 +21,7 @@
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_marginTop="?actionBarSize"
+      android:layout_marginBottom="?actionBarSize"
       android:id="@id/swipe"
       >
     <android.support.v7.widget.RecyclerView
@@ -29,13 +30,6 @@
         android:layout_height="match_parent"
         />
   </android.support.v4.widget.SwipeRefreshLayout>
-
-  <android.support.design.widget.FloatingActionButton
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:id="@id/fabButton"
-      android:layout_gravity="bottom|right"
-      android:layout_margin="16dp"
-      />
+  <include layout="@layout/issue_detail_add_comment"/>
 
 </FrameLayout>
