Issue comment edit text colorAccent

--- a/app/src/main/res/layout/issue_detail_add_comment.xml
+++ b/app/src/main/res/layout/issue_detail_add_comment.xml
@@ -19,7 +19,7 @@
       android:background="?selectableItemBackgroundBorderless"
       android:layout_gravity="right"
       app:srcCompat="@drawable/ic_zoom_out"
-      android:tint="?colorPrimary"
+      android:tint="?colorAccent"
       android:id="@+id/addCommentButtonExpand"
       android:padding="12dp"
       android:layout_alignParentTop="true"
@@ -47,7 +47,7 @@
       android:background="?selectableItemBackgroundBorderless"
       android:layout_gravity="right"
       app:srcCompat="@drawable/ic_send"
-      android:tint="?colorPrimary"
+      android:tint="?colorAccent"
       android:id="@+id/addCommentButton"
       android:padding="12dp"
       android:layout_alignParentTop="true"
