--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -144,5 +144,7 @@
         type="id"/>
   <item name="nav_drawer_events_orgs"
         type="id"/>
+  <item name="nav_drawer_donate"
+        type="id"/>
 
 </resources>
