File fragments render MD

--- a/app/src/main/res/layout/file_fragment.xml
+++ b/app/src/main/res/layout/file_fragment.xml
@@ -5,7 +5,7 @@
              android:background="?gitskarios_webview"
     >
 
-  <io.github.kbiakov.codeview.CodeView
+  <com.pddstudio.highlightjs.HighlightJsView
       android:id="@+id/codeview"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
