--- a/app/src/main/res/layout/fragment_content.xml
+++ b/app/src/main/res/layout/fragment_content.xml
@@ -3,16 +3,8 @@
              android:layout_height="match_parent"
     >
 
-  <ImageView
-      android:id="@+id/imageView"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:scaleType="centerInside"
-      android:visibility="gone"
-      />
-
   <com.pddstudio.highlightjs.HighlightJsView
-      android:id="@+id/webview"
+      android:id="@+id/codeview"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       />
