#548 - Add functionality to remove head branch from pull request view  (#550)
* #548
- created separate reference service
- created get/patch/delete reference service clients
- added delete branch button to pull request detail issue view
- implemented delete branch button logic

-- need to fix some little issue with calls to server: view is created before check branch exist call

* #548
- resolved problem with refreshing pull request header item (previous commit)
- created GitReferenceService.HEADS string which should be added to every reference request
- after pull request data is received -> check if head branch exist; this information is showing for us when to display delete branch button
- changing color for delete button - red when pull request is closed but not merged, purple when it is closed and merged

--- a/app/src/main/res/layout/pullrequest_detail_issue_view.xml
+++ b/app/src/main/res/layout/pullrequest_detail_issue_view.xml
@@ -34,4 +34,16 @@
         android:background="@drawable/pull_request_merge_pending"
         android:text="@string/pullrequest_merge_action_pending"
         android:textColor="@color/white" />
+
+    <Button
+        android:id="@+id/deleteBranch"
+        android:layout_width="match_parent"
+        android:layout_height="36dp"
+        android:layout_marginBottom="@dimen/materialize_baseline_grid"
+        android:layout_marginLeft="@dimen/gapLarge"
+        android:layout_marginRight="@dimen/gapLarge"
+        android:background="@drawable/pull_request_merged_delete_branch"
+        android:text="@string/pull_request_delete_branch"
+        android:textColor="@color/white"
+        android:visibility="gone"/>
 </merge>
