--- a/app/src/main/res/layout/assignee_row.xml
+++ b/app/src/main/res/layout/assignee_row.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
               android:orientation="horizontal"
-              android:layout_width="wrap_content"
+              android:layout_width="match_parent"
               android:layout_height="48dp"
               android:gravity="center_vertical"
               android:background="?android:selectableItemBackground"
